magicblock-config-macro/tests/fixtures/fail_merge_unnamed.rs
use magicblock_config_macro::Mergeable;

#[derive(Default, Mergeable)]
struct TestConfig(u64, String);

fn main() {}
